apps/infra/external-services/external-homeassistant.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant-external
  namespace: external-services
spec:
  type: ClusterIP
  ports:
    - name: https
      port: 8123
      targetPort: 8123
---
apiVersion: v1
kind: Endpoints
metadata:
  name: homeassistant-external
  namespace: external-services
subsets:
  - addresses:
      - ip: 192.168.20.51
    ports:
      - name: https
        port: 8123
