apps/infra/external-services/external-jellyfin.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-external
  namespace: external-services
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8096
      targetPort: 8096
---
apiVersion: v1
kind: Endpoints
metadata:
  name: jellyfin-external
  namespace: external-services
subsets:
  - addresses:
      - ip: 192.168.20.61
    ports:
      - name: http
        port: 8096
