apps/infra/external-services/external-nas.yaml
apiVersion: v1
kind: Service
metadata:
  name: nas-external
  namespace: external-services
spec:
  type: ClusterIP
  ports:
    - name: https
      port: 443
      targetPort: 443
---
apiVersion: v1
kind: Endpoints
metadata:
  name: nas-external
  namespace: external-services
subsets:
  - addresses:
      - ip: 192.168.20.31
    ports:
      - name: https
        port: 80
