apps/infra/external-services/external-proxmox.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxmox-external
  namespace: external-services
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8006
      targetPort: 8006
---
apiVersion: v1
kind: Endpoints
metadata:
  name: proxmox-external
  namespace: external-services
subsets:
  - addresses:
      - ip: 192.168.20.11
    ports:
      - name: http
        port: 8006
