apps/infra/external-services/external-qbittorrent.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-external
  namespace: external-services
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Endpoints
metadata:
  name: qbittorrent-external
  namespace: external-services
subsets:
  - addresses:
      - ip: 192.168.20.61
    ports:
      - name: http
        port: 8080
