apps/infra/external-services/external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-external
  namespace: minio
spec:
  type: ClusterIP
  ports:
    - name: web
      port: 9002
      targetPort: 9002
    - name: api
      port: 9000
      targetPort: 9000
---
apiVersion: v1
kind: Endpoints
metadata:
  name: minio-external
  namespace: minio
subsets:
  - addresses:
      - ip: 192.168.20.31
    ports:
      - name: web
        port: 9002
      - name: api
        port: 9000
