apps/infra/external-services/ingress-homeassistant.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homeassistant
  namespace: external-services
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`homeassistant.k3s.crussell.io`)
      kind: Rule
      services:
        - name: homeassistant-external
          port: 8123
          scheme: http
  tls:
    certResolver: letsencrypt
