apps/infra/external-services/ingress-jellyfin.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: external-services
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jellyfin.crussell.io`)
      kind: Rule
      services:
        - name: jellyfin-external
          port: 8096
          scheme: http
  tls: {}
