apps/infra/external-services/ingress-minio-api.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: minio-api
  namespace: external-services
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`s3.internal.crussell.io`)
      kind: Rule
      services:
        - name: minio-external
          port: 9000
          scheme: http
  tls:
    certResolver: letsencrypt
