apps/infra/external-services/ingress-minio-web.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: minio-web
  namespace: external-services
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`minio.internal.crussell.io`)
      kind: Rule
      services:
        - name: minio-external
          port: 9002
