apps/infra/external-services/ingress-proxmox.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: proxmox
  namespace: external-services
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`proxmox.internal.crussell.io`)
      kind: Rule
      services:
        - name: proxmox-external
          port: 8006
          scheme: http
