apps/infra/external-services/ingress-qbittorrent.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent
  namespace: external-services
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`qbittorrent.internal.crussell.io`)
      kind: Rule
      services:
        - name: qbittorrent-external
          port: 8080
  tls: {}
